2009-01-12  John W. Eaton  <jwe@octave.org>

	* optimization/fzero.m, optimization/fsolve.m: Style fixes.
	Use strcmpi to compare options.

2009-01-12  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* strings/strvcat.m: Remove.
	* strings/Makefile.in (SOURCES): Remove strvcat.m.
	
2009-01-12  John W. Eaton  <jwe@octave.org>

	* plot/diffuse.m, plot/surfl.m, plot/specular.m: Style fixes.

2009-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* general/sortrows.m: Fix invalid `{x:y} = z' assignment.
	* miscellaneous/orderfields.m: Dtto.
	* miscellaneous/what.m: Dtto.
	* pkg/pkg.m: Dtto.
	* plot/ndgrid.m: Dtto.
	* strings/strcat.m: Dtto.

2009-01-09  Kai Habel <kai.habel@gmx.de>

        * plot/surfl.m: New function
        * plot/diffuse.m: dito
        * plot/specular.m: dito

2009-01-05  John W. Eaton  <jwe@octave.org>

	* mkdoc: Set defaults for FIND and PERL.  Check usage.

2009-01-01  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* miscellaneous/__xzip__.m: Fix error messages, add tests.
	
2008-12-26  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/int2str.m, general/num2str.m, strings/base2dec.m,
	strings/blanks.m, strings/cstrcat.m, strings/findstr.m,
	strings/isstrprop.m, strings/mat2str.m, strings/regexptranslate.m,
	strings/split.m, strings/str2double.m, strings/str2num.m,
	strings/strcat.m, strings/strcmpi.m, strings/strfind.m,
	strings/strjust.m, strings/strmatch.m, strings/strncmpi.m,
	strings/strrep.m, strings/strtok.m, strings/strtrim.m,
	strings/strtrunc.m, strings/strvcat.m, strings/substr.m: 
	Fix documentation strings, add examples, references and tests.
	* scripts/general/int2str.m: Add missing semicolon.
	* scripts/strings/regexptranslate.m: add nargin check.
	* scripts/strings/str2double.m: fix nargin check.
	
2008-12-29  David Bateman  <dbateman@free.fr>

	* goemetry/voronoi.m: Speed up and handle dense grids.

2008-12-28  Jaroslav Hajek <highegg@gmail.com>

	* miscellaneous/delete.m: Allow filename globs. Display warnings if
	operation fails.
